RESOLVED FIXED146202
REGRESSION(r182303): [GTK] Context menu API is broken since r182303
https://bugs.webkit.org/show_bug.cgi?id=146202
Summary REGRESSION(r182303): [GTK] Context menu API is broken since r182303
Carlos Garcia Campos
Reported 2015-06-22 05:06:27 PDT
And we didn't notice it because context menu API tests are skipped (see https://bugs.webkit.org/show_bug.cgi?id=117689). The problem is that ContextMenuclient API changed in r182303, but we didn't notice it either, and the default handler for getContextMenuFromProposedMenu was executed. An override keyword would have caught this.
Attachments
Patch (2.73 KB, patch)
2015-06-22 05:08 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2015-06-22 05:08:44 PDT
WebKit Commit Bot
Comment 2 2015-06-22 05:10:46 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2015-06-22 05:43:26 PDT
Note You need to log in before you can comment on or make changes to this bug.