REGRESSION(r182303): [GTK] Context menu API is broken since r182303 https://bugs.webkit.org/show_bug.cgi?id=146202

Reviewed by Žan Doberšek.

The problem is that ContextMenuclient API changed in r182303, but
we didn't notice it either, and the default handler for
getContextMenuFromProposedMenu was executed. An override keyword
would have caught this.

* UIProcess/API/gtk/WebKitContextMenuClient.cpp: Build a Vector of
WebContextMenuItemData as expected by our API, and add add
override keyword to ensure this doesn't happen again.

Canonical link: https://commits.webkit.org/164268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185825 268f45cc-cd09-0410-ab3c-d52691b4dbfc