Source/WebKit2/UIProcess/API/gtk/WebKitContextMenuClient.cpp
@@ -21,6 +21,7 @@
 #include "WebKitContextMenuClient.h"
 
 #include "APIContextMenuClient.h"
+#include "WebContextMenuItem.h"
 #include "WebKitWebViewBasePrivate.h"
 #include "WebKitWebViewPrivate.h"
 
@@ -34,7 +35,7 @@ public:
     }
 
 private:
-    bool getContextMenuFromProposedMenu(WebPageProxy&, const Vector<WebContextMenuItemData>& proposedMenu, Vector<WebContextMenuItemData>&, const WebHitTestResult::Data& hitTestResultData, API::Object* userData)
+    bool getContextMenuFromProposedMenu(WebPageProxy&, const Vector<RefPtr<WebContextMenuItem>>& proposedMenu, Vector<RefPtr<WebContextMenuItem>>&, const WebHitTestResult::Data& hitTestResultData, API::Object* userData) override
     {
         GRefPtr<GVariant> variant;
         if (userData) {
@@ -42,7 +43,12 @@ private:
             CString userDataString = static_cast<API::String*>(userData)->string().utf8();
             variant = adoptGRef(g_variant_parse(nullptr, userDataString.data(), userDataString.data() + userDataString.length(), nullptr, nullptr));
         }
-        webkitWebViewPopulateContextMenu(m_webView, proposedMenu, hitTestResultData, variant.get());
+
+        Vector<WebContextMenuItemData> menuItems;
+        menuItems.reserveInitialCapacity(proposedMenu.size());
+        for (auto& item : proposedMenu)
+            menuItems.uncheckedAppend(*item->data());
+        webkitWebViewPopulateContextMenu(m_webView, menuItems, hitTestResultData, variant.get());
         return true;
     }
 
